# src/controllers/perfume.controller.js
@@ -2,7 +2,7 @@ import { response } from "../../config/response.js";
 import { status } from "../../config/response.status.js";
 
 import { perfumeContent, categoryContent } from "../providers/perfume.provider.js";
-import { joinperfumeWrite } from "../services/perfume.service.js";
+import { joinperfumeWrite, joinperfumeDelete } from "../services/perfume.service.js";
 
 export const perfumePreview = async (req, res, next) => {
   console.log("향수 상세 정보 조회를 요청하였습니다!");
@@ -21,9 +21,19 @@ export const categoryPreview = async (req, res, next) => {
 export const perfumeWrite = async (req, res, next) => {
   console.log("향수 코멘트 작성을 요청하였습니다!");
 
-  console.log(req.params.PerfumeID);
-  console.log(req.params.UserID);
-  console.log("body:", req.body); // 값이 잘 들어오나 찍어보기 위한 테스트용
+  // console.log(req.params.PerfumeID);
+  // console.log(req.params.UserID);
+  // console.log("body:", req.body); // 값이 잘 들어오나 찍어보기 위한 테스트용
 
   res.send(response(status.SUCCESS, await joinperfumeWrite(req.params.PerfumeID, req.params.UserID, req.body)));
+};
+
+export const perfumeDelete = async (req, res, next) => {
+  console.log("향수 코멘트 삭제를 요청하였습니다!");
+
+  // console.log(req.params.PerfumeID);
+  // console.log(req.params.UserID);
+  // console.log(req.params.CommentID);
+
+  res.send(response(status.SUCCESS, await joinperfumeDelete(req.params.PerfumeID, req.params.UserID, req.params.CommentID)));
 };
